force-app/main/default/objects/Apttus_Billing__UsageSchedule__c/Apttus_Billing__UsageSchedule__c.object-meta.xml
<CustomObject>
    <description>Represents a usage schedule for a product or service</description>
    <label>Usage Schedule</label>
    <nameField>
        <displayFormat>US-{00000000}</displayFormat>
        <label>Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>