force-app/main/default/objects/Apttus_Billing__UsageSchedule__c/fields/Apttus_Billing__ActualOverageQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ActualOverageQuantity__c</fullName>
    <description>The actual overage quantity</description>
    <inlineHelpText>The actual overage quantity</inlineHelpText>
    <label>Actual Overage Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>