force-app/main/default/objects/Apttus_Billing__UsageSchedule__c/fields/Apttus_Billing__ActualQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ActualQuantity__c</fullName>
    <description>The actual usage quantity</description>
    <inlineHelpText>The actual usage quantity</inlineHelpText>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>