force-app/main/default/objects/Apttus_Billing__UsageSchedule__c/fields/Apttus_Billing__IncludedQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__IncludedQuantity__c</fullName>
    <description>The included quantity</description>
    <inlineHelpText>The included quantity</inlineHelpText>
    <label>Included Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>