force-app/main/default/objects/Apttus_Billing__UsageSchedule__c/fields/Apttus_Billing__IsSuperseded__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__IsSuperseded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will initially be false and will be set to true when the Usage Schedule is superseded due to a Cancellation or Amendment to an Asset Line Item.</description>
    <inlineHelpText>Will initially be false and will be set to true when the Usage Schedule is superseded due to a Cancellation or Amendment to an Asset Line Item.</inlineHelpText>
    <label>Is Superseded</label>
    <type>Checkbox</type>
</CustomField>