force-app/main/default/objects/Apttus_Billing__UsageSchedule__c/fields/Apttus_Billing__MinQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__MinQuantity__c</fullName>
    <description>The minimum usage quantity</description>
    <inlineHelpText>The minimum usage quantity</inlineHelpText>
    <label>Min Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>