force-app/main/default/objects/Apttus_Billing__UsageSchedule__c/fields/Apttus_Billing__PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PeriodEndDate__c</fullName>
    <description>The usage period end date</description>
    <inlineHelpText>The usage period end date</inlineHelpText>
    <label>Period End Date</label>
    <type>Date</type>
</CustomField>